examples/errors/ce_multiply.olang
// Method call test
// Multiply two integers

Program: Main

class Main is
    this() is
        var result := multiply(Array[Integer](6), Integer[Integer](7)) # Array
        result.print()
    end

    method multiply(x: Integer, y: Integer) : Integer is
        return x.Mult(y)
    end

end
